[Fix]: extra scroll on mobile view

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -9,7 +9,7 @@
 
 .container {
   background-color: $pageBg;
-  min-height: 100vh;
+  max-height: 100vh;
   @include flexProp(row, 0rem, center, center);
   font-family: "poppins", sans-serif;
   position: relative;
@@ -33,5 +33,11 @@
     .confetti2 {
       left: 100%;
     }
+  }
+}
+
+@media screen and (max-width: 22.5rem) {
+  .container {
+    margin-top: 3rem;
   }
 }
